@@ -1,3 +1,8 @@
+2012-12-02  Moritz Bunkus  <moritz@bunkus.org>
+
+	* mkvmerge: bug fix: Fixed reading linked seek heads in Matroska
+	files.
+
 2012-11-13  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mmg: bug fix: Fixed reading file names containing a '%' from a
